welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: illegal start of simple expression
  while(){
        ^SnakeBuggle:7: error: ')' expected but '}' found.
}
^